--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,6 +39,10 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.card {
+  width: 18rem;
+}
+
 @keyframes slide {
   0% {
     transform: translateX(-25%);
