--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik&display=swap');
+
 html {
   height: 100%;
 }
 
 body {
   margin: 0;
+  font-family: 'Rubik', sans-serif;
 }
 
 .bg {
