--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,3 +76,10 @@ body {
 .container {
 padding-top: 1%;
 }
+/*
+#background {
+  background-image: url('../../public/background.jpg');
+  background-size: cover;
+  background-repeat:no-repeat;
+  background-position: center center;
+} */
