--- a/src/css/style.css
+++ b/src/css/style.css
@@ -90,3 +90,16 @@ body {
   background-repeat:no-repeat;
   background-position: center center;
 } */
+
+.share-links li{
+  display: inline;
+}
+
+.share-links i{
+  width: 2%;
+}
+
+.share-section{
+  margin: 2rem;
+  
+}
