--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,7 @@ body {
 
 .bg {
   animation: slide 3s ease-in-out infinite alternate;
-  background-image: linear-gradient(-60deg, #6c3 50%, #09f 50%);
+  background-image: linear-gradient(-60deg, rgb(48, 190, 62) 50%, rgb(21, 105, 161) 50%);
   bottom: 0;
   left: -50%;
   opacity: .5;
@@ -96,6 +96,7 @@ body {
 }
 .container {
  padding-top: 1%;
+ margin-bottom: 1%;
 }
 
 .manejo {
@@ -137,3 +138,4 @@ body {
 .fondonegro{
   background-color: white;
 }
+
