--- a/src/css/style.css
+++ b/src/css/style.css
@@ -136,6 +136,10 @@ body {
 }
 
 .fondonegro{
-  background-color: white;
+  background-color: rgb(255, 255, 255);
+}
+
+.sinfondo{
+  background-color: rgba(255, 255, 255, 0);
 }
 
