--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Iceland&display=swap');
 
 html {
   height: 100%;
@@ -171,4 +172,18 @@ body {
   padding-top: 2%;
   display: inline;
   margin-left: 3%;
+}
+
+.text-inversionz{
+  font-family: 'Iceland';
+  font-size: 15rem;
+  padding-top: 7rem;
+  padding-bottom: 10rem;
+  color: white;
+}
+
+.logo{
+  font-family: 'Iceland';
+  font-size: auto;
+  color: white;
 }
